src/main/java/com/example/travelguidewebapplication/error/ErrorResponse.java
package com.example.travelguidewebapplication.error;

import lombok.*;
import lombok.experimental.FieldDefaults;
import org.springframework.http.HttpStatus;

@Data
@Builder
@FieldDefaults(level = AccessLevel.PRIVATE)
@AllArgsConstructor
@NoArgsConstructor
public class ErrorResponse {
    private String errorMessage;
    private HttpStatus status;
}
